<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_main_ly"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_card"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="14sp" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical">

               <!-- <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_normal_text_size"/>

                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/email_ip_ly">

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:hint="@string/email"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="13dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:id="@+id/phone_in_ly">
                <EditText
                    android:id="@+id/reg_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/register_mobile"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="13dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:id="@+id/username_ip_ly">

                <EditText
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="13dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/password_in_ly">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:hint="@string/register_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="13dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:text="@string/otp_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:padding="0dp"
                    android:textSize="12sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/reg_fab"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/colorApp"
                    app:srcCompat="@drawable/ic_right_arrow"
                    app:borderWidth="0dp"
                    app:fabCustomSize="60dp" />
            </LinearLayout>

</ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

 <!--       <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/loader_card"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="30dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="gone"
                android:id="@+id/loader_ly3"
                android:orientation="vertical">
                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loader_img"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="60dp"
                    android:src="@drawable/solutionsgif"/>
            </LinearLayout>
        <!--</androidx.cardview.widget.CardView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:id="@+id/scrollingtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textSize="25dp"
                android:background="@color/colorApp"
                android:textColor="@color/colorWhite"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>