<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_ly"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardview"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#000000"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="14sp" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/log_radio"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="start"
                        android:id="@+id/customer_btn"
                        android:checked="true"
                        android:buttonTint="@color/colorApp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="Customer"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="20dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:buttonTint="@color/colorApp"
                        android:text="Employee"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_layout"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        android:id="@+id/cus_mobile_in_ly">

                        <EditText
                            android:id="@+id/cus_log_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="9dp"
                            android:clickable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/register_mobile"
                            android:textColorHint="@color/colorApp"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="13dp"
                            android:singleLine="true"
                            android:textSize="13sp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="6dp"
                        android:id="@+id/cus_pass_in_ly">
                        <EditText
                            android:id="@+id/cus_log_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="13dp"
                            android:hint="@string/register_password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="13sp"
                            android:padding="13dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/cus_log_fab"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:backgroundTint="@color/colorApp"
                        android:src="@drawable/ic_right_arrow"
                        app:borderWidth="0dp"
                        app:fabCustomSize="60dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/employee_layout"
                    android:visibility="gone"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/emp_name_in_ly">

                        <EditText
                            android:id="@+id/emp_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="13dp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/employee_id"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="13sp"
                            android:padding="13dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="6dp"
                        android:id="@+id/emp_pass_in_ly">
                        <EditText
                            android:id="@+id/emp_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/register_password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textSize="13sp"
                            android:padding="13dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="6dp"
                        android:id="@+id/emp_loc_in_ly">
                        <EditText
                            android:id="@+id/emp_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/register_location"
                            android:maxLines="1"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="13sp"
                            android:padding="13dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/emp_fab"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margins"
                        android:backgroundTint="@color/colorApp"
                        android:src="@drawable/ic_right_arrow"
                        app:borderWidth="0dp"
                        app:fabCustomSize="60dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loader_card"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="visible"
                android:id="@+id/loader_ly"
                android:orientation="vertical">
                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loader_img"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="150dp"
                    android:src="@drawable/solutionsgif"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:id="@+id/signup_ly"
            android:gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtloginresend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Resend OTP"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dont_acc"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="top"
                    android:layout_gravity="top"
                    tools:ignore="RtlCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Signup here"
                    android:id="@+id/signup_tv"
                    android:textColor="@color/colorApp"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="top"
                    android:layout_gravity="top"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <!-- <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/login_tv"
                 android:textSize="14sp"
                 android:padding="5dp"
                 android:textAlignment="center"
                 android:gravity="top"
                 android:layout_gravity="center"/>-->

            <TextView
                android:id="@+id/textversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version 1.0.0"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/scrollingtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textSize="25dp"
                android:background="@color/colorApp"
                android:textColor="@color/colorWhite"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>